Syntax analysis using Yacc (Parser)/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLEQUOTATION
    FOR
    ID
    KEYWORD
    LCBRACKET
    PRINT
    RCBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> decl_list
Rule 2     decl_list -> decl_list decl
Rule 3     decl_list -> decl
Rule 4     decl -> var_decl
Rule 5     decl -> fun_decl
Rule 6     var_decl -> type_spec IDENT SEMICOLON
Rule 7     var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON
Rule 8     type_spec -> VOID
Rule 9     type_spec -> BOOL
Rule 10    type_spec -> INT
Rule 11    type_spec -> FLOAT
Rule 12    type_spec -> CHAR
Rule 13    fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt
Rule 14    params -> param_list
Rule 15    params -> VOID
Rule 16    params -> empty
Rule 17    param_list -> param_list COMMA param
Rule 18    param_list -> param
Rule 19    param -> type_spec IDENT
Rule 20    param -> type_spec IDENT LBRACKET RBRACKET
Rule 21    compound_stmt -> local_decls stmt_list
Rule 22    local_decls -> local_decls local_decl
Rule 23    local_decls -> empty
Rule 24    local_decl -> type_spec IDENT SEMICOLON
Rule 25    local_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON
Rule 26    stmt_list -> stmt_list stmt
Rule 27    stmt_list -> empty
Rule 28    stmt -> expr_stmt
Rule 29    stmt -> if_stmt
Rule 30    stmt -> while_stmt
Rule 31    stmt -> return_stmt
Rule 32    expr_stmt -> expr SEMICOLON
Rule 33    expr_stmt -> SEMICOLON
Rule 34    while_stmt -> WHILE LPAREN expr RPAREN stmt
Rule 35    if_stmt -> IF LPAREN expr RPAREN stmt
Rule 36    if_stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 37    return_stmt -> RETURN SEMICOLON
Rule 38    return_stmt -> RETURN expr SEMICOLON
Rule 39    expr -> IDENT APPOINTMENT expr
Rule 40    expr -> IDENT LBRACKET expr RBRACKET EQUAL expr
Rule 41    expr -> expr OR expr
Rule 42    expr -> expr AND expr
Rule 43    expr -> expr EQUAL expr
Rule 44    expr -> expr APPOINTMENT NUMBER
Rule 45    expr -> expr LESS_THAN_EQUAL expr
Rule 46    expr -> expr GREATER_THAN_EQUAL expr
Rule 47    expr -> expr LESS_THAN expr
Rule 48    expr -> expr GREATER_THAN expr
Rule 49    expr -> expr TIMES expr
Rule 50    expr -> expr PLUS expr
Rule 51    expr -> expr DIVIDE expr
Rule 52    expr -> expr MINUS expr
Rule 53    expr -> ! expr
Rule 54    expr -> LPAREN expr RPAREN
Rule 55    expr -> IDENT
Rule 56    expr -> IDENT LBRACKET expr RBRACKET
Rule 57    expr -> IDENT LPAREN args RPAREN
Rule 58    expr -> NUMBER
Rule 59    arg_list -> arg_list COMMA expr
Rule 60    arg_list -> expr
Rule 61    args -> arg_list
Rule 62    args -> empty
Rule 63    empty -> <empty>

Terminals, with rules where they appear

!                    : 53
AND                  : 42
APPOINTMENT          : 39 44
BOOL                 : 9
CHAR                 : 12
COMMA                : 17 59
DIVIDE               : 51
DOUBLEQUOTATION      : 
ELSE                 : 36
EQUAL                : 40 43
FLOAT                : 11
FOR                  : 
GREATER_THAN         : 48
GREATER_THAN_EQUAL   : 46
ID                   : 
IDENT                : 6 7 13 19 20 24 25 39 40 55 56 57
IF                   : 35 36
INT                  : 10
KEYWORD              : 
LBRACKET             : 7 20 25 40 56
LCBRACKET            : 
LESS_THAN            : 47
LESS_THAN_EQUAL      : 45
LPAREN               : 13 34 35 36 54 57
MINUS                : 52
NUMBER               : 44 58
OR                   : 41
PLUS                 : 50
PRINT                : 
RBRACKET             : 7 20 25 40 56
RCBRACKET            : 
RETURN               : 37 38
RPAREN               : 13 34 35 36 54 57
SEMICOLON            : 6 7 24 25 32 33 37 38
TIMES                : 49
VOID                 : 8 15
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

arg_list             : 59 61
args                 : 57
compound_stmt        : 13
decl                 : 2 3
decl_list            : 1 2
empty                : 16 23 27 62
expr                 : 32 34 35 36 38 39 40 40 41 41 42 42 43 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 56 59 60
expr_stmt            : 28
fun_decl             : 5
if_stmt              : 29
local_decl           : 22
local_decls          : 21 22
param                : 17 18
param_list           : 14 17
params               : 13
program              : 0
return_stmt          : 31
stmt                 : 26 34 35 36 36
stmt_list            : 21 26
type_spec            : 6 7 13 19 20 24 25
var_decl             : 4
while_stmt           : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decl_list
    (2) decl_list -> . decl_list decl
    (3) decl_list -> . decl
    (4) decl -> . var_decl
    (5) decl -> . fun_decl
    (6) var_decl -> . type_spec IDENT SEMICOLON
    (7) var_decl -> . type_spec IDENT LBRACKET RBRACKET SEMICOLON
    (13) fun_decl -> . type_spec IDENT LPAREN params RPAREN compound_stmt
    (8) type_spec -> . VOID
    (9) type_spec -> . BOOL
    (10) type_spec -> . INT
    (11) type_spec -> . FLOAT
    (12) type_spec -> . CHAR

    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    program                        shift and go to state 1
    decl_list                      shift and go to state 2
    decl                           shift and go to state 3
    var_decl                       shift and go to state 4
    fun_decl                       shift and go to state 5
    type_spec                      shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> decl_list .
    (2) decl_list -> decl_list . decl
    (4) decl -> . var_decl
    (5) decl -> . fun_decl
    (6) var_decl -> . type_spec IDENT SEMICOLON
    (7) var_decl -> . type_spec IDENT LBRACKET RBRACKET SEMICOLON
    (13) fun_decl -> . type_spec IDENT LPAREN params RPAREN compound_stmt
    (8) type_spec -> . VOID
    (9) type_spec -> . BOOL
    (10) type_spec -> . INT
    (11) type_spec -> . FLOAT
    (12) type_spec -> . CHAR

    $end            reduce using rule 1 (program -> decl_list .)
    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    decl                           shift and go to state 12
    var_decl                       shift and go to state 4
    fun_decl                       shift and go to state 5
    type_spec                      shift and go to state 6

state 3

    (3) decl_list -> decl .

    VOID            reduce using rule 3 (decl_list -> decl .)
    BOOL            reduce using rule 3 (decl_list -> decl .)
    INT             reduce using rule 3 (decl_list -> decl .)
    FLOAT           reduce using rule 3 (decl_list -> decl .)
    CHAR            reduce using rule 3 (decl_list -> decl .)
    $end            reduce using rule 3 (decl_list -> decl .)


state 4

    (4) decl -> var_decl .

    VOID            reduce using rule 4 (decl -> var_decl .)
    BOOL            reduce using rule 4 (decl -> var_decl .)
    INT             reduce using rule 4 (decl -> var_decl .)
    FLOAT           reduce using rule 4 (decl -> var_decl .)
    CHAR            reduce using rule 4 (decl -> var_decl .)
    $end            reduce using rule 4 (decl -> var_decl .)


state 5

    (5) decl -> fun_decl .

    VOID            reduce using rule 5 (decl -> fun_decl .)
    BOOL            reduce using rule 5 (decl -> fun_decl .)
    INT             reduce using rule 5 (decl -> fun_decl .)
    FLOAT           reduce using rule 5 (decl -> fun_decl .)
    CHAR            reduce using rule 5 (decl -> fun_decl .)
    $end            reduce using rule 5 (decl -> fun_decl .)


state 6

    (6) var_decl -> type_spec . IDENT SEMICOLON
    (7) var_decl -> type_spec . IDENT LBRACKET RBRACKET SEMICOLON
    (13) fun_decl -> type_spec . IDENT LPAREN params RPAREN compound_stmt

    IDENT           shift and go to state 13


state 7

    (8) type_spec -> VOID .

    IDENT           reduce using rule 8 (type_spec -> VOID .)


state 8

    (9) type_spec -> BOOL .

    IDENT           reduce using rule 9 (type_spec -> BOOL .)


state 9

    (10) type_spec -> INT .

    IDENT           reduce using rule 10 (type_spec -> INT .)


state 10

    (11) type_spec -> FLOAT .

    IDENT           reduce using rule 11 (type_spec -> FLOAT .)


state 11

    (12) type_spec -> CHAR .

    IDENT           reduce using rule 12 (type_spec -> CHAR .)


state 12

    (2) decl_list -> decl_list decl .

    VOID            reduce using rule 2 (decl_list -> decl_list decl .)
    BOOL            reduce using rule 2 (decl_list -> decl_list decl .)
    INT             reduce using rule 2 (decl_list -> decl_list decl .)
    FLOAT           reduce using rule 2 (decl_list -> decl_list decl .)
    CHAR            reduce using rule 2 (decl_list -> decl_list decl .)
    $end            reduce using rule 2 (decl_list -> decl_list decl .)


state 13

    (6) var_decl -> type_spec IDENT . SEMICOLON
    (7) var_decl -> type_spec IDENT . LBRACKET RBRACKET SEMICOLON
    (13) fun_decl -> type_spec IDENT . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 14
    LBRACKET        shift and go to state 15
    LPAREN          shift and go to state 16


state 14

    (6) var_decl -> type_spec IDENT SEMICOLON .

    VOID            reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)
    BOOL            reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)
    INT             reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)
    FLOAT           reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)
    CHAR            reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)
    $end            reduce using rule 6 (var_decl -> type_spec IDENT SEMICOLON .)


state 15

    (7) var_decl -> type_spec IDENT LBRACKET . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 17


state 16

    (13) fun_decl -> type_spec IDENT LPAREN . params RPAREN compound_stmt
    (14) params -> . param_list
    (15) params -> . VOID
    (16) params -> . empty
    (17) param_list -> . param_list COMMA param
    (18) param_list -> . param
    (63) empty -> .
    (19) param -> . type_spec IDENT
    (20) param -> . type_spec IDENT LBRACKET RBRACKET
    (8) type_spec -> . VOID
    (9) type_spec -> . BOOL
    (10) type_spec -> . INT
    (11) type_spec -> . FLOAT
    (12) type_spec -> . CHAR

    VOID            shift and go to state 21
    RPAREN          reduce using rule 63 (empty -> .)
    BOOL            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    type_spec                      shift and go to state 18
    params                         shift and go to state 19
    param_list                     shift and go to state 20
    empty                          shift and go to state 22
    param                          shift and go to state 23

state 17

    (7) var_decl -> type_spec IDENT LBRACKET RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 24


state 18

    (19) param -> type_spec . IDENT
    (20) param -> type_spec . IDENT LBRACKET RBRACKET

    IDENT           shift and go to state 25


state 19

    (13) fun_decl -> type_spec IDENT LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 26


state 20

    (14) params -> param_list .
    (17) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 14 (params -> param_list .)
    COMMA           shift and go to state 27


state 21

    (15) params -> VOID .
    (8) type_spec -> VOID .

    RPAREN          reduce using rule 15 (params -> VOID .)
    IDENT           reduce using rule 8 (type_spec -> VOID .)


state 22

    (16) params -> empty .

    RPAREN          reduce using rule 16 (params -> empty .)


state 23

    (18) param_list -> param .

    COMMA           reduce using rule 18 (param_list -> param .)
    RPAREN          reduce using rule 18 (param_list -> param .)


state 24

    (7) var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .

    VOID            reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)
    BOOL            reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)
    INT             reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)
    FLOAT           reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)
    CHAR            reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)
    $end            reduce using rule 7 (var_decl -> type_spec IDENT LBRACKET RBRACKET SEMICOLON .)


state 25

    (19) param -> type_spec IDENT .
    (20) param -> type_spec IDENT . LBRACKET RBRACKET

    COMMA           reduce using rule 19 (param -> type_spec IDENT .)
    RPAREN          reduce using rule 19 (param -> type_spec IDENT .)
    LBRACKET        shift and go to state 28


state 26

    (13) fun_decl -> type_spec IDENT LPAREN params RPAREN . compound_stmt
    (21) compound_stmt -> . local_decls stmt_list
    (22) local_decls -> . local_decls local_decl
    (23) local_decls -> . empty
    (63) empty -> .

    VOID            reduce using rule 63 (empty -> .)
    BOOL            reduce using rule 63 (empty -> .)
    INT             reduce using rule 63 (empty -> .)
    FLOAT           reduce using rule 63 (empty -> .)
    CHAR            reduce using rule 63 (empty -> .)
    SEMICOLON       reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    IDENT           reduce using rule 63 (empty -> .)
    !               reduce using rule 63 (empty -> .)
    LPAREN          reduce using rule 63 (empty -> .)
    NUMBER          reduce using rule 63 (empty -> .)
    $end            reduce using rule 63 (empty -> .)

    compound_stmt                  shift and go to state 29
    local_decls                    shift and go to state 30
    empty                          shift and go to state 31

state 27

    (17) param_list -> param_list COMMA . param
    (19) param -> . type_spec IDENT
    (20) param -> . type_spec IDENT LBRACKET RBRACKET
    (8) type_spec -> . VOID
    (9) type_spec -> . BOOL
    (10) type_spec -> . INT
    (11) type_spec -> . FLOAT
    (12) type_spec -> . CHAR

    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    param                          shift and go to state 32
    type_spec                      shift and go to state 18

state 28

    (20) param -> type_spec IDENT LBRACKET . RBRACKET

    RBRACKET        shift and go to state 33


state 29

    (13) fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .

    VOID            reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    BOOL            reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    INT             reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    FLOAT           reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    CHAR            reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    $end            reduce using rule 13 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)


state 30

    (21) compound_stmt -> local_decls . stmt_list
    (22) local_decls -> local_decls . local_decl
    (26) stmt_list -> . stmt_list stmt
    (27) stmt_list -> . empty
    (24) local_decl -> . type_spec IDENT SEMICOLON
    (25) local_decl -> . type_spec IDENT LBRACKET RBRACKET SEMICOLON
    (63) empty -> .
    (8) type_spec -> . VOID
    (9) type_spec -> . BOOL
    (10) type_spec -> . INT
    (11) type_spec -> . FLOAT
    (12) type_spec -> . CHAR

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    SEMICOLON       reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    IDENT           reduce using rule 63 (empty -> .)
    !               reduce using rule 63 (empty -> .)
    LPAREN          reduce using rule 63 (empty -> .)
    NUMBER          reduce using rule 63 (empty -> .)
    $end            reduce using rule 63 (empty -> .)
    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

  ! VOID            [ reduce using rule 63 (empty -> .) ]
  ! BOOL            [ reduce using rule 63 (empty -> .) ]
  ! INT             [ reduce using rule 63 (empty -> .) ]
  ! FLOAT           [ reduce using rule 63 (empty -> .) ]
  ! CHAR            [ reduce using rule 63 (empty -> .) ]

    stmt_list                      shift and go to state 34
    local_decl                     shift and go to state 35
    empty                          shift and go to state 36
    type_spec                      shift and go to state 37

state 31

    (23) local_decls -> empty .

    VOID            reduce using rule 23 (local_decls -> empty .)
    BOOL            reduce using rule 23 (local_decls -> empty .)
    INT             reduce using rule 23 (local_decls -> empty .)
    FLOAT           reduce using rule 23 (local_decls -> empty .)
    CHAR            reduce using rule 23 (local_decls -> empty .)
    SEMICOLON       reduce using rule 23 (local_decls -> empty .)
    IF              reduce using rule 23 (local_decls -> empty .)
    WHILE           reduce using rule 23 (local_decls -> empty .)
    RETURN          reduce using rule 23 (local_decls -> empty .)
    IDENT           reduce using rule 23 (local_decls -> empty .)
    !               reduce using rule 23 (local_decls -> empty .)
    LPAREN          reduce using rule 23 (local_decls -> empty .)
    NUMBER          reduce using rule 23 (local_decls -> empty .)
    $end            reduce using rule 23 (local_decls -> empty .)


state 32

    (17) param_list -> param_list COMMA param .

    COMMA           reduce using rule 17 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 17 (param_list -> param_list COMMA param .)


state 33

    (20) param -> type_spec IDENT LBRACKET RBRACKET .

    COMMA           reduce using rule 20 (param -> type_spec IDENT LBRACKET RBRACKET .)
    RPAREN          reduce using rule 20 (param -> type_spec IDENT LBRACKET RBRACKET .)


state 34

    (21) compound_stmt -> local_decls stmt_list .
    (26) stmt_list -> stmt_list . stmt
    (28) stmt -> . expr_stmt
    (29) stmt -> . if_stmt
    (30) stmt -> . while_stmt
    (31) stmt -> . return_stmt
    (32) expr_stmt -> . expr SEMICOLON
    (33) expr_stmt -> . SEMICOLON
    (35) if_stmt -> . IF LPAREN expr RPAREN stmt
    (36) if_stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (34) while_stmt -> . WHILE LPAREN expr RPAREN stmt
    (37) return_stmt -> . RETURN SEMICOLON
    (38) return_stmt -> . RETURN expr SEMICOLON
    (39) expr -> . IDENT APPOINTMENT expr
    (40) expr -> . IDENT LBRACKET expr RBRACKET EQUAL expr
    (41) expr -> . expr OR expr
    (42) expr -> . expr AND expr
    (43) expr -> . expr EQUAL expr
    (44) expr -> . expr APPOINTMENT NUMBER
    (45) expr -> . expr LESS_THAN_EQUAL expr
    (46) expr -> . expr GREATER_THAN_EQUAL expr
    (47) expr -> . expr LESS_THAN expr
    (48) expr -> . expr GREATER_THAN expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr DIVIDE expr
    (52) expr -> . expr MINUS expr
    (53) expr -> . ! expr
    (54) expr -> . LPAREN expr RPAREN
    (55) expr -> . IDENT
    (56) expr -> . IDENT LBRACKET expr RBRACKET
    (57) expr -> . IDENT LPAREN args RPAREN
    (58) expr -> . NUMBER

    VOID            reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    BOOL            reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    INT             reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    FLOAT           reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    CHAR            reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    $end            reduce using rule 21 (compound_stmt -> local_decls stmt_list .)
    SEMICOLON       shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 47
    RETURN          shift and go to state 48
    IDENT           shift and go to state 49
    !               shift and go to state 51
    LPAREN          shift and go to state 46
    NUMBER          shift and go to state 50

    stmt                           shift and go to state 38
    expr_stmt                      shift and go to state 39
    if_stmt                        shift and go to state 40
    while_stmt                     shift and go to state 41
    return_stmt                    shift and go to state 42
    expr                           shift and go to state 43

state 35

    (22) local_decls -> local_decls local_decl .

    VOID            reduce using rule 22 (local_decls -> local_decls local_decl .)
    BOOL            reduce using rule 22 (local_decls -> local_decls local_decl .)
    INT             reduce using rule 22 (local_decls -> local_decls local_decl .)
    FLOAT           reduce using rule 22 (local_decls -> local_decls local_decl .)
    CHAR            reduce using rule 22 (local_decls -> local_decls local_decl .)
    SEMICOLON       reduce using rule 22 (local_decls -> local_decls local_decl .)
    IF              reduce using rule 22 (local_decls -> local_decls local_decl .)
    WHILE           reduce using rule 22 (local_decls -> local_decls local_decl .)
    RETURN          reduce using rule 22 (local_decls -> local_decls local_decl .)
    IDENT           reduce using rule 22 (local_decls -> local_decls local_decl .)
    !               reduce using rule 22 (local_decls -> local_decls local_decl .)
    LPAREN          reduce using rule 22 (local_decls -> local_decls local_decl .)
    NUMBER          reduce using rule 22 (local_decls -> local_decls local_decl .)
    $end            reduce using rule 22 (local_decls -> local_decls local_decl .)


state 36

    (27) stmt_list -> empty .

    SEMICOLON       reduce using rule 27 (stmt_list -> empty .)
    IF              reduce using rule 27 (stmt_list -> empty .)
    WHILE           reduce using rule 27 (stmt_list -> empty .)
    RETURN          reduce using rule 27 (stmt_list -> empty .)
    IDENT           reduce using rule 27 (stmt_list -> empty .)
    !               reduce using rule 27 (stmt_list -> empty .)
    LPAREN          reduce using rule 27 (stmt_list -> empty .)
    NUMBER          reduce using rule 27 (stmt_list -> empty .)
    VOID            reduce using rule 27 (stmt_list -> empty .)
    BOOL            reduce using rule 27 (stmt_list -> empty .)
    INT             reduce using rule 27 (stmt_list -> empty .)
    FLOAT           reduce using rule 27 (stmt_list -> empty .)
    CHAR            reduce using rule 27 (stmt_list -> empty .)
    $end            reduce using rule 27 (stmt_list -> empty .)


state 37

    (24) local_decl -> type_spec . IDENT SEMICOLON
    (25) local_decl -> type_spec . IDENT LBRACKET RBRACKET SEMICOLON

    IDENT           shift and go to state 52


state 38

    (26) stmt_list -> stmt_list stmt .

    SEMICOLON       reduce using rule 26 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 26 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 26 (stmt_list -> stmt_list stmt .)
    RETURN          reduce using rule 26 (stmt_list -> stmt_list stmt .)
    IDENT           reduce using rule 26 (stmt_list -> stmt_list stmt .)
    !               reduce using rule 26 (stmt_list -> stmt_list stmt .)
    LPAREN          reduce using rule 26 (stmt_list -> stmt_list stmt .)
    NUMBER          reduce using rule 26 (stmt_list -> stmt_list stmt .)
    VOID            reduce using rule 26 (stmt_list -> stmt_list stmt .)
    BOOL            reduce using rule 26 (stmt_list -> stmt_list stmt .)
    INT             reduce using rule 26 (stmt_list -> stmt_list stmt .)
    FLOAT           reduce using rule 26 (stmt_list -> stmt_list stmt .)
    CHAR            reduce using rule 26 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 26 (stmt_list -> stmt_list stmt .)


state 39

    (28) stmt -> expr_stmt .

    SEMICOLON       reduce using rule 28 (stmt -> expr_stmt .)
    IF              reduce using rule 28 (stmt -> expr_stmt .)
    WHILE           reduce using rule 28 (stmt -> expr_stmt .)
    RETURN          reduce using rule 28 (stmt -> expr_stmt .)
    IDENT           reduce using rule 28 (stmt -> expr_stmt .)
    !               reduce using rule 28 (stmt -> expr_stmt .)
    LPAREN          reduce using rule 28 (stmt -> expr_stmt .)
    NUMBER          reduce using rule 28 (stmt -> expr_stmt .)
    VOID            reduce using rule 28 (stmt -> expr_stmt .)
    BOOL            reduce using rule 28 (stmt -> expr_stmt .)
    INT             reduce using rule 28 (stmt -> expr_stmt .)
    FLOAT           reduce using rule 28 (stmt -> expr_stmt .)
    CHAR            reduce using rule 28 (stmt -> expr_stmt .)
    $end            reduce using rule 28 (stmt -> expr_stmt .)
    ELSE            reduce using rule 28 (stmt -> expr_stmt .)


state 40

    (29) stmt -> if_stmt .

    SEMICOLON       reduce using rule 29 (stmt -> if_stmt .)
    IF              reduce using rule 29 (stmt -> if_stmt .)
    WHILE           reduce using rule 29 (stmt -> if_stmt .)
    RETURN          reduce using rule 29 (stmt -> if_stmt .)
    IDENT           reduce using rule 29 (stmt -> if_stmt .)
    !               reduce using rule 29 (stmt -> if_stmt .)
    LPAREN          reduce using rule 29 (stmt -> if_stmt .)
    NUMBER          reduce using rule 29 (stmt -> if_stmt .)
    VOID            reduce using rule 29 (stmt -> if_stmt .)
    BOOL            reduce using rule 29 (stmt -> if_stmt .)
    INT             reduce using rule 29 (stmt -> if_stmt .)
    FLOAT           reduce using rule 29 (stmt -> if_stmt .)
    CHAR            reduce using rule 29 (stmt -> if_stmt .)
    $end            reduce using rule 29 (stmt -> if_stmt .)
    ELSE            reduce using rule 29 (stmt -> if_stmt .)


state 41

    (30) stmt -> while_stmt .

    SEMICOLON       reduce using rule 30 (stmt -> while_stmt .)
    IF              reduce using rule 30 (stmt -> while_stmt .)
    WHILE           reduce using rule 30 (stmt -> while_stmt .)
    RETURN          reduce using rule 30 (stmt -> while_stmt .)
    IDENT           reduce using rule 30 (stmt -> while_stmt .)
    !               reduce using rule 30 (stmt -> while_stmt .)
    LPAREN          reduce using rule 30 (stmt -> while_stmt .)
    NUMBER          reduce using rule 30 (stmt -> while_stmt .)
    VOID            reduce using rule 30 (stmt -> while_stmt .)
